# houdini

./: .gitignore  LOP_Grid.C  LOP_Grid.h  LOP_Noise.exp  LOP_Noise.lib  LOP_Ripples.exp  LOP_Ripples.lib  README.txt
builds/LOP_Grid/dso/: LOP_Grid.lib
hdk/: README.md
hdk/LOP_Blast/: LOP_Blast.C  LOP_Blast.h
hdk/LOP_Color/: LOP_Color.C  LOP_Color.h
hdk/LOP_Grid/: CMakeLists.txt  LOP_Grid.C  README.md
hdk/LOP_Grid/dso/: LOP_Grid.exp
hdk/LOP_Noise/: LOP_Noise.C  LOP_Noise.h
hdk/LOP_Ripples/: LOP_Ripples.C  LOP_Ripples.h
hdk/UsdMesh/: UsdMesh.C
hip/LOP_Grid/: create_grid.hipnc  lop_grid.py
hip/laplace/: add_noise.hipnc  laplace.hipnc
hip/misc/: LOP_visualize_attr.hipnc  Scatter.hip  Scatter.hipnc  Scatter_recovered.hipnc
hip/misc/usd/assets/testtreea/: mtl.usdnc  payload.usdnc  testtreea.usd
hip/texture_cards/: cards.hip
ml/scatter/: readme.md  scatter.ipynb
python/: image_auto_tag.py  predict_image.py
python/lops/: apply_noise.py  blast_from_prim.py  load_packed_usd.py
python/shading/: debug_shader.py
usd/grid/: geom.usd  noise.usda
